<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculator and unit converter</string>
    <string name="nav_header_subtitle">hilal123anwar@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Standard</string>
    <string name="menu_gallery">Scientific</string>
    <string name="menu_date_diff">Difference between dates</string>
    <string name="menu_date_schedule">Add and subtract dates</string>
    <string name="menu_length">Length</string>
    <string-array name="length_array">
        <item>Fermi</item>
        <item>NanoMeter</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inch</item>
        <item>Foot</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Angström</item>
        <item>Light-year</item>
        <item>Nautical mile</item>
        <item>Fathom</item>
        <item>Bohr radius"</item>
        <item>Parsec</item>
        <item>Rod</item>
    </string-array>
    <string-array name="mass_array">
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Slug</item>
        <item>Atomic mass unit</item>
        <item>Ounce</item>
        <item>Pound</item>
        <item>Ton</item>
        <item>Metric ton</item>
    </string-array>
    <string-array name="time_array">
        <item>Hour</item>
        <item>Minute</item>
        <item>Second</item>
        <item>Millisecond</item>
        <item>Microsecond</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Calendar Years</item>
    </string-array>
    <string-array name="speed_array">
        <item>Meter per Second</item>
        <item>kilometer per hour</item>
        <item>feet per second</item>
        <item>miles per hour</item>
        <item>centimeter per second</item>
        <item>miles per second</item>
        <item>knot</item>
    </string-array>
    <string-array name="angle_array">
        <item>Degree</item>
        <item>Minute</item>
        <item>Second</item>
        <item>Radian</item>
        <item>Revolution</item>
    </string-array>
    <string-array name="area_array">
        <item>Square centimeter</item>
        <item>Square foot</item>
        <item>Square inch</item>
        <item>Square metre</item>
        <item>Square mile</item>
        <item>Barn</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>
    <string-array name="volume_array">
        <item>Cubic metre</item>
        <item>Cubic centimeter</item>
        <item>Liter</item>
        <item>Cubic foot</item>
        <item>Cubic inch</item>
        <item>U.S. fluid gallon</item>
        <item>U.S. fluid quarts</item>
        <item>U.S. pints</item>
        <item>U.S. fluid ounces</item>
        <item>British imperial gallon</item>
    </string-array>
    <string-array name="date_array">
        <item>Difference between dates</item>
        <item>Add or subtract days</item>
    </string-array>
    <string-array name="force_array">
        <item>Newton</item>
        <item>Dyne</item>
        <item>Pound</item>
        <item>Poundal</item>
        <item>Gram-force</item>
        <item>Kilogram-force</item>
        <item>Ton</item>
    </string-array>
    <string-array name="energy_array">
        <item>British thermal unit</item>
        <item>erg</item>
        <item>foot-pound </item>
        <item>horsepower-hour</item>
        <item>Joule</item>
        <item>calorie</item>
        <item>kilowatt-hour</item>
        <item>electron-volt</item>
        <item>million-electron-volt</item>
        <item>kilogram</item>
        <item>unified atomic mass unit</item>
    </string-array>
    <string-array name="power_array">
        <item>British thermal unit per hour </item>
        <item>Foot-pound per second</item>
        <item>Horsepower</item>
        <item>Calorie per second</item>
        <item>Kilowatt</item>
        <item>Watt</item>
    </string-array>
    <string-array name="pressure_array">
        <item>Atm</item>
        <item>Dyne per centimeter sq</item>
        <item>Inch of water at 4°C </item>
        <item>mm of Hg at 0°C</item>
        <item>Pascal</item>
        <item>Pound per inch sq</item>
        <item>Pound per foot sq</item>
        <item>Bar</item>
        <item>Millibar</item>
        <item>Torr</item>
    </string-array>
    <string-array name="density_array">
        <item>Kilogram per cubic meter</item>
        <item>Slug per cubic foot</item>
        <item>Gram per cubic centimeter</item>
        <item>Pound per cubic foot</item>
        <item>Pound per cubic inch</item>
    </string-array>
    <string-array name="viscosity_Dynamic_array">
        <item>Pascal second or poiseuille (S.I)</item>
        <item>Kilogram-force second per square metre</item>
        <item>Poundal second per square foot</item>
        <item>Poise (CGS)</item>
        <item>Centipoise</item>
        <item>Pound per foot hour</item>
        <item>Pound per foot second</item>
        <item>Pound-force second per square foot</item>
        <item>Pound-force second per square inch (reyn)</item>
    </string-array>
    <string-array name="viscosity_Kinematic_array">
        <item>Centi stokes</item>
        <item>Stokes</item>
        <item>Square centimetre per second</item>
        <item>Square metre per second</item>
        <item>Square foot per second</item>
        <item>Square inch per second</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mass_and_weight">Mass and Weight</string>
    <string name="time">Time</string>
    <string name="angle">Angle</string>
    <string name="speed">Speed</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
    <string name="temperature">Temperature</string>
    <string name="force">Force</string>
    <string name="energy_and_power">Energy and power</string>
    <string name="pressure">Pressure</string>
    <string name="density">Density</string>
    <string name="viscosity">Viscosity</string>
    <string name="conversion">Conversion</string>
    <string name="calculation">Calculation</string>
    <string name="date_and_time">Date calculation</string>
    <string name="currency">Currency</string>
    <string name="todo">TODO</string>
    <string name="c">C</string>
    <string name="cube_root">∛</string>
    <string name="factorial">!</string>
    <string name="mode">|×|</string>
    <string name="log">log</string>
    <string name="root">√</string>
    <string name="sec">sec</string>
    <string name="cot">cot</string>
    <string name="power">^</string>
    <string name="percentage">%</string>
    <string name="ln">ln</string>
    <string name="csc">csc</string>
    <string name="close_bracket">)</string>
    <string name="open_bracket">(</string>
    <string name="pie">π</string>
    <string name="e">e</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="deg">Deg</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="div">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="pro">×</string>
    <string name="inv_l">inv(l)</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="minus">−</string>
    <string name="inv_t">inv(t)</string>
    <string name="_9">9</string>
    <string name="decimal">.</string>
    <string name="p_q">p/q</string>
    <string name="plus">+</string>
    <string name="hyp">hyp</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="minus_plus">±</string>
    <string name="about">About</string>
</resources>